Fix for Bug #9272, as submitted by marc boeren (m.boeren@guidance.nl). Applied by me, due to apparently a lack of cvs access to ext/odbc for him.